# hchess

./: .project  HChess.cabal  LICENSE.txt  README.md
.dist-buildwrapper/: HChess.cabal
.dist-buildwrapper/src/: .ChessBoard.hs.bwinfo  .ChessRules.hs.bwinfo  .Main.hs.bwinfo  Board.hs  ChessBoard.hi  ChessBoard.hs  ChessRules.hi  Main.hi
src/: AI.hs  Castling.hs  CastlingTests.hs  ChessBoard.hi  ChessBoard.hs  ChessRules.hs  Enpassant.hs  Game.hs  GameLogic.hs  Main.hi  Main.hs  build.bat
src/test/: AI_test.hs  CastlingTests.hs  Castling_test.hs
