name:           HChess
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Zach Cleghern

executable HChess
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4, array, parallel
  ghc-options:     -Wall -O -threaded +RTS -N
  other-modules:   
                   ChessBoard,
                   ChessRules,
                   Castling,
                   Enpassant,
                   AI