name:           HChess
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Zach

executable HChess
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   ChessBoard,
                   ChessRules

